<resources>
    <string name="app_name">AppAluno</string>
    <!-- Activity listar alunos -->
    <string name="editTextNome">Nome do Aluno</string>
    <string name="buttonAddAluno">Adicionar Aluno</string>
    <string name="erroAddAluno">Insira um nome válido</string>
    <!-- Activity cadastro -->
    <string name="textFieldNome">Nome</string>
    <string name="textFieldTelefone">Telefone</string>
    <string name="textFieldSite">Site</string>
    <string name="textFieldEmail">E-mail</string>
    <string name="textFieldEndereco">Endereço</string>
    <string name="textFieldNota">Nota</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <!-- Itens do menu -->
    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="mais_opcoes">Mais opções</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="provas">Provas</string>
    <string name="preferencias">Preferências</string>
    <!-- Itens do menu de conexto -->
    <string name="ligar">Ligar</string>
    <string name="enviarSMS">Enviar SMS</string>
    <string name="acharNoMapa">Achar no Mapa</string>
    <string name="navegarNoSite">Navegar no Site</string>
    <string name="enviarEmail">Enviar E-mail</string>
    <string name="excluir">Excluir</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
