<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_novo"
        android:icon="@drawable/ic_novo"
        android:title="@string/novo"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu_mapa"
        android:icon="@drawable/ic_mapa"
        android:title="@string/mapa"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_opcoes"
        android:showAsAction="always"
        android:title="@string/mais_opcoes">
        <menu>
            <item
                android:id="@+id/menu_enviar"
                android:icon="@drawable/ic_enviar"
                android:showAsAction="always"
                android:title="@string/enviar"/>
            <item
                android:id="@+id/menu_sincronizar"
                android:icon="@drawable/ic_receber"
                android:showAsAction="always"
                android:title="@string/sincronizar"/>
            <item
                android:id="@+id/menu_preferencias"
                android:icon="@drawable/ic_preferencias"
                android:showAsAction="always"
                android:title="@string/preferencias"/>
        </menu>
    </item>

</menu>