<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lucascb.appaluno.CadastroActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" />

        <TextView
            android:text="@string/textFieldNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:singleLine="false" />

        <TextView
            android:text="@string/textFieldTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/textFieldSite"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3" />

        <TextView
            android:text="@string/textFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4" />

        <TextView
            android:text="@string/textFieldEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText5" />

        <TextView
            android:text="@string/textFieldNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar" />

        <Button
            android:text="@string/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCadastrar" />
    </LinearLayout>
</RelativeLayout>
